fix: batteling with CORS issues